--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Recipe site</title>
+        <title>lasagna</title>
     </head>
 
     <body>
@@ -24,10 +24,10 @@
             <li>Spread about 1 cup pasta sauce in 2-quart shallow baking dish (11x7-inch).</li>
             <li>Top with 3 uncooked noodles, ricotta cheese, 1 cup mozzarella cheese, Parmesan cheese and 1 cup pasta sauce.</li>
             <li>Top with remaining 3 uncooked noodles and remaining pasta sauce.</li>
-            <li>Cover</li>
-            <li>Bake at 375 degrees <strong>F</strong> for 1 hour</li>
-            <li>Uncover and top with remaining mozzarella cheese</li>
-            <li>Let stand 5 minutes</li>
+            <li>Cover.</li>
+            <li>Bake at 375 degrees <strong>F</strong> for 1 hour.</li>
+            <li>Uncover and top with remaining mozzarella cheese.</li>
+            <li>Let stand 5 minutes.</li>
         </ol>
     </body>
 </html>
