--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Lasagna</h1>
-        <img src="lasagna_img.webp">
+        <img src="./lasagna_img.webp" alt="an image of lasagna">
         <h2>Description</h2>
         <p>Lasagna is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets. Either term can also refer 
             to an Italian dish made of stacked layers of lasagna alternating with fillings</p>
