--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/vegetable_biryani.html">Vegetable Biryani</a></li>
+            <li><a href="./recipes/pineapple_cake.html">Pineapple Cake</a></li>
+        </ul>
     </body>
 </html>
